Added an Individual Article component, getArticleById API function, ReactBootstrap Link feature

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,14 @@
 .votes {
   text-align: right;
 }
+
+.centered-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh; /* Adjust as needed for vertical centering */
+}
+
+.link {
+    text-decoration: none;
+}
