--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; /* Adjust as needed for vertical centering */
+  min-height: 100vh;
 }
 
 .link {
     text-decoration: none;
+}
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+
 }
