--- a/src/App.css
+++ b/src/App.css
@@ -24,5 +24,16 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+}
 
+.comments-container {
+  max-width: 400px;
+  padding: 2px;
+  margin: 0 auto;
+  max-height: px;
+}
+
+.comments-scroller {
+  max-height: 600px;
+  overflow-y: auto;
 }
