--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,9 @@
 .delete-button {
   margin-left: auto;
 }
+
+#bg-nested-dropdown {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
